# ntust-course-selection-assistant

./: README.md  bun.lockb  components.json  package.json  tailwind.config.ts
src/: app.pcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: CourseBlock.svelte  Sidemenu.svelte  TimeTable.svelte  api.ts  context.ts  course.ts  courseblock.ts  navigate.ts  state.ts  storage.ts  store.ts  tables.ts  timetable.ts  utils-2.ts
src/lib/components/: ActivityBar.svelte  CourseBlock.svelte  Empty.svelte  LoadingBar.svelte  StatusBar.svelte  TableSelector.svelte  TimeTable.svelte
src/lib/components/course-block/: course-block-content.svelte  course-block-trigger.svelte  course-block.svelte  index.ts
src/lib/components/course-card/: course-card-content.svelte  course-card-trigger.svelte  course-card.svelte  index.ts
src/lib/components/sidemenu/: index.ts  sidemenu-content.svelte  sidemenu-handle.svelte  sidemenu-header.svelte  sidemenu-title.svelte  sidemenu.svelte
src/lib/components/timetable/: index.ts  timetable-body.svelte  timetable-cell.svelte  timetable-head.svelte  timetable-header.svelte  timetable.svelte
src/lib/components/topbar/: index.ts  topbar-header.svelte  topbar-space.svelte  topbar-subtitle.svelte  topbar-title.svelte  topbar.svelte
src/routes/: +layout.svelte  +page.svelte  SplitView.svelte
src/routes/search/: +layout.svelte  +layout.svelteBAK  +page.svelte  SearchSidemenu.svelte
src/routes/search/view/: +page.svelte
src/routes/tables/: +layout.svelte  +page.svelte  TableSidemenu.svelte
(+1 files in other folders)
